--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Crew Check-In</title>
   <link rel="manifest" href="manifest.json">
   <style>
-    body{font-family:sans-serif;max-width:400px;margin:1rem auto;padding:0;}
+    body{font-family:sans-serif;max-width:400px;margin:1rem auto;}
     input,select,button{width:100%;margin:.5rem 0;padding:.5rem;font-size:1rem;}
     #status{margin-top:1rem;color:#555;}
   </style>
