--- a/index.html
+++ b/index.html
@@ -1,24 +1,66 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Crew Check-In</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
+  <title>Check-In / Check-Out Ca Trực</title>
+
+  <!-- PWA: Manifest -->
   <link rel="manifest" href="manifest.json">
+  <meta name="theme-color" content="#0078D7">
+
+  <!-- IOS support -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="default">
+  <link rel="apple-touch-icon" href="evn_logo.png" sizes="192x192">
+
   <style>
-    body{font-family:sans-serif;max-width:400px;margin:1rem auto;}
-    input,select,button{width:100%;margin:.5rem 0;padding:.5rem;font-size:1rem;}
-    #status{margin-top:1rem;color:#555;}
+    body { font-family: sans-serif; margin:0; padding:20px; background:#f5f5f5; }
+    h1 { text-align:center; margin-bottom:20px; }
+    .form-group { margin-bottom:15px; }
+    input, select, button {
+      width:100%; padding:10px; font-size:16px;
+      box-sizing:border-box;
+      border:1px solid #ccc; border-radius:4px;
+    }
+    button { background:#0078D7; color:#fff; border:none; cursor:pointer; }
+    button:disabled { background:#aaa; }
+    #status { margin-top:15px; font-size:16px; }
   </style>
 </head>
 <body>
-  <h2>Check-In / Check-Out Ca Trực</h2>
-  <input id="email" type="email" placeholder="Email (you@company.com)">
-  <select id="shift">
-    <option>CA01</option><option>CA02</option><option>CA03</option>
-  </select>
-  <button id="btn">Bắt đầu ca</button>
+
+  <h1>Check-In / Check-Out Ca Trực</h1>
+
+  <div class="form-group">
+    <input id="email" type="email" placeholder="Email (ví dụ lamdtb@gmail.com)">
+  </div>
+
+  <div class="form-group">
+    <select id="shift">
+      <option value="CA01">CA01</option>
+      <option value="CA02">CA02</option>
+      <option value="CA03">CA03</option>
+    </select>
+  </div>
+
+  <div class="form-group">
+    <button id="btn">Bắt đầu ca</button>
+  </div>
+
   <div id="status"></div>
+
+  <!-- PWA: Service Worker Registration -->
+  <script>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('/sw.js')
+        .then(reg => console.log('SW registered:', reg.scope))
+        .catch(err => console.error('SW failed:', err));
+    }
+  </script>
+
+  <!-- App logic -->
   <script src="app.js"></script>
+
 </body>
 </html>
